feat: comprehensive backend refactor and frontend enhancements (P1)
Backend Changes:
- Refactor controllers to use ApiResponse wrapper for consistent response format
- Add RocketMQConsoleClient for RocketMQ console integration
- Add copilot modules: ChatSessionManager, IntentRouter, ToolCallOrchestrator
- Enhance PrometheusClient with query building and error handling
- Update trace-starter aspects for better middleware tracing
- Add middleware metadata reporting improvements
- Update reconcile tasks for better error handling

Frontend Changes:
- Add MiddlewareDetailPage for middleware details view
- Enhance ServiceMiddlewarePage with better UI/UX
- Update TracePage with improved trace visualization
- Add i18n translations for new features
- Update static assets (build output)

Infrastructure:
- Add middleware exporters K8s configs
- Add Nacos K8s deployment config
- Update Prometheus scrape configs
- Add Postman install scripts

Tests:
- Add AntiScrapingServiceTest, CompensationServiceTest
- Add BatchInsertServiceConcurrencyTest, StockConfirmServiceConcurrencyTest
- Update existing tests for compatibility

🤖 Generated with [Qoder][https://qoder.com]