@@ -1,11 +1,18 @@
 package com.leoli.gateway.admin.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.leoli.gateway.admin.dto.ApiResponse;
 import com.leoli.gateway.admin.model.AccessLogGlobalConfig;
+import com.leoli.gateway.admin.model.AccessLogEntryEntity;
+import com.leoli.gateway.admin.repository.AccessLogEntryRepository;
 import com.leoli.gateway.admin.service.AccessLogConfigService;
 import com.leoli.gateway.admin.service.KubernetesResourceService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -14,6 +21,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -22,6 +30,7 @@ import java.util.stream.Stream;
 /**
  * Access log configuration controller.
  * Provides API for managing global access log settings.
+ * Uses ApiResponse for standardized response format.
  *
  * @author leoli
  */
@@ -29,25 +38,71 @@ import java.util.stream.Stream;
 @RestController
 @RequestMapping("/api/access-log")
 @RequiredArgsConstructor
-public class AccessLogConfigController {
+public class AccessLogConfigController extends BaseController {
 
     private final AccessLogConfigService accessLogConfigService;
     private final KubernetesResourceService kubernetesResourceService;
-    private final com.leoli.gateway.admin.repository.AccessLogEntryRepository accessLogEntryRepository;
+    private final AccessLogEntryRepository accessLogEntryRepository;
+    private final ObjectMapper objectMapper;
+
+    /**
+     * Resolve log directory - try multiple possible locations.
+     */
+    private Path resolveLogDirectory(String logDir) {
+        if (logDir == null || logDir.isEmpty()) {
+            logDir = "./logs/access";
+        }
+
+        // Try the configured path first
+        Path dirPath = Paths.get(logDir);
+        if (Files.exists(dirPath)) {
+            return dirPath;
+        }
+
+        // Try absolute path
+        if (Paths.get(logDir).isAbsolute()) {
+            return dirPath;
+        }
+
+        // Try relative to user.dir (project root)
+        String userDir = System.getProperty("user.dir");
+        dirPath = Paths.get(userDir, logDir);
+        if (Files.exists(dirPath)) {
+            return dirPath;
+        }
+
+        // Try sibling my-gateway directory (common dev setup)
+        Path gatewayPath = Paths.get(userDir).getParent();
+        if (gatewayPath != null) {
+            Path myGatewayPath = gatewayPath.resolve("my-gateway");
+            if (Files.exists(myGatewayPath)) {
+                dirPath = myGatewayPath.resolve(logDir.replace("./", ""));
+                if (Files.exists(dirPath)) {
+                    return dirPath;
+                }
+            }
+            // Also try gatewayPath directly
+            dirPath = gatewayPath.resolve("my-gateway/logs/access");
+            if (Files.exists(dirPath)) {
+                return dirPath;
+            }
+        }
+
+        // Return original path
+        return Paths.get(logDir);
+    }
 
     /**
      * Get current access log configuration.
      * @param instanceId Optional instance ID for instance-specific config
      */
     @GetMapping("/config")
-    public ResponseEntity<Map<String, Object>> getConfig(
+    public ResponseEntity<ApiResponse<Map<String, Object>>> getConfig(
             @RequestParam(required = false) String instanceId) {
-        Map<String, Object> result = new HashMap<>();
-
         try {
             AccessLogGlobalConfig config = accessLogConfigService.getConfig(instanceId);
 
-            Map<String, Object> configMap = new HashMap<>();
+            Map<String, Object> configMap = new LinkedHashMap<>();
             configMap.put("enabled", config.isEnabled());
             configMap.put("deployMode", config.getDeployMode().name());
             configMap.put("logDirectory", config.getLogDirectory());
@@ -66,17 +121,11 @@ public class AccessLogConfigController {
             configMap.put("logToConsole", config.isLogToConsole());
             configMap.put("includeAuthInfo", config.isIncludeAuthInfo());
 
-            result.put("code", 200);
-            result.put("message", "success");
-            result.put("data", configMap);
-
+            return ResponseEntity.ok(ApiResponse.success(configMap));
         } catch (Exception e) {
             log.error("Failed to get access log config", e);
-            result.put("code", 500);
-            result.put("message", "Failed to get config: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to get config: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 
     /**
@@ -84,16 +133,12 @@ public class AccessLogConfigController {
      * @param request Configuration map, must include instanceId
      */
     @PostMapping("/config")
-    public ResponseEntity<Map<String, Object>> saveConfig(@RequestBody Map<String, Object> request) {
-        Map<String, Object> result = new HashMap<>();
-
+    public ResponseEntity<ApiResponse<Void>> saveConfig(@RequestBody Map<String, Object> request) {
         try {
             // Extract instanceId from request (required)
             String instanceId = (String) request.get("instanceId");
             if (instanceId == null || instanceId.isEmpty()) {
-                result.put("code", 400);
-                result.put("message", "instanceId is required");
-                return ResponseEntity.ok(result);
+                return ResponseEntity.badRequest().body(ApiResponse.badRequest("instanceId is required"));
             }
 
             // Get existing config or create default
@@ -162,40 +207,31 @@ public class AccessLogConfigController {
             boolean saved = accessLogConfigService.saveConfig(config, instanceId);
 
             if (saved) {
-                result.put("code", 200);
-                result.put("message", "Configuration saved successfully");
                 log.info("Access log config saved for instance {}: enabled={}, mode={}",
                         instanceId, config.isEnabled(), config.getDeployMode());
+                return ResponseEntity.ok(ApiResponse.success("Configuration saved successfully"));
             } else {
-                result.put("code", 500);
-                result.put("message", "Failed to save configuration");
+                return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to save configuration"));
             }
-
         } catch (IllegalArgumentException e) {
             log.warn("Invalid config: {}", e.getMessage());
-            result.put("code", 400);
-            result.put("message", e.getMessage());
+            return ResponseEntity.badRequest().body(ApiResponse.badRequest(e.getMessage()));
         } catch (Exception e) {
             log.error("Failed to save access log config", e);
-            result.put("code", 500);
-            result.put("message", "Failed to save config: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to save config: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 
     /**
      * Get deployment mode options.
      */
     @GetMapping("/deploy-modes")
-    public ResponseEntity<Map<String, Object>> getDeployModes() {
-        Map<String, Object> result = new HashMap<>();
-
+    public ResponseEntity<ApiResponse<List<Map<String, Object>>>> getDeployModes() {
         List<AccessLogConfigService.DeployModeOption> options = accessLogConfigService.getDeployModeOptions();
 
         List<Map<String, Object>> modeList = options.stream()
                 .map(opt -> {
-                    Map<String, Object> modeMap = new HashMap<>();
+                    Map<String, Object> modeMap = new LinkedHashMap<>();
                     modeMap.put("mode", opt.mode().name());
                     modeMap.put("description", opt.description());
                     modeMap.put("defaultPath", opt.defaultPath());
@@ -203,50 +239,32 @@ public class AccessLogConfigController {
                 })
                 .toList();
 
-        result.put("code", 200);
-        result.put("message", "success");
-        result.put("data", modeList);
-
-        return ResponseEntity.ok(result);
+        return ResponseEntity.ok(ApiResponse.success(modeList));
     }
 
     /**
      * Get log level options.
      */
     @GetMapping("/log-levels")
-    public ResponseEntity<Map<String, Object>> getLogLevelOptions() {
-        Map<String, Object> result = new HashMap<>();
-
+    public ResponseEntity<ApiResponse<List<Map<String, Object>>>> getLogLevelOptions() {
         List<Map<String, Object>> levelList = List.of(
                 Map.of("level", "MINIMAL", "description", "Minimal: request line, status, duration"),
                 Map.of("level", "NORMAL", "description", "Normal: + headers, auth info"),
                 Map.of("level", "VERBOSE", "description", "Verbose: + request/response body")
         );
-
-        result.put("code", 200);
-        result.put("message", "success");
-        result.put("data", levelList);
-
-        return ResponseEntity.ok(result);
+        return ResponseEntity.ok(ApiResponse.success(levelList));
     }
 
     /**
      * Get log format options.
      */
     @GetMapping("/log-formats")
-    public ResponseEntity<Map<String, Object>> getLogFormatOptions() {
-        Map<String, Object> result = new HashMap<>();
-
+    public ResponseEntity<ApiResponse<List<Map<String, Object>>>> getLogFormatOptions() {
         List<Map<String, Object>> formatList = List.of(
                 Map.of("format", "JSON", "description", "JSON format (recommended for log aggregation)"),
                 Map.of("format", "TEXT", "description", "Human-readable text format")
         );
-
-        result.put("code", 200);
-        result.put("message", "success");
-        result.put("data", formatList);
-
-        return ResponseEntity.ok(result);
+        return ResponseEntity.ok(ApiResponse.success(formatList));
     }
 
     /**
@@ -254,39 +272,28 @@ public class AccessLogConfigController {
      * @param instanceId Optional instance ID for instance-specific config
      */
     @PostMapping("/reset")
-    public ResponseEntity<Map<String, Object>> resetConfig(
+    public ResponseEntity<ApiResponse<Void>> resetConfig(
             @RequestParam(required = false) String instanceId) {
-        Map<String, Object> result = new HashMap<>();
-
         try {
             AccessLogGlobalConfig defaultConfig = accessLogConfigService.createDefaultConfig();
             boolean saved = accessLogConfigService.saveConfig(defaultConfig, instanceId);
 
             if (saved) {
-                result.put("code", 200);
-                result.put("message", "Configuration reset to default");
+                return ResponseEntity.ok(ApiResponse.success("Configuration reset to default"));
             } else {
-                result.put("code", 500);
-                result.put("message", "Failed to reset configuration");
+                return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to reset configuration"));
             }
-
         } catch (Exception e) {
             log.error("Failed to reset access log config", e);
-            result.put("code", 500);
-            result.put("message", "Failed to reset: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to reset: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 
     /**
      * Get Fluent Bit configuration templates for different deployment modes.
-     * Provides ready-to-use configuration snippets for log collection.
      */
     @GetMapping("/fluent-bit-templates")
-    public ResponseEntity<Map<String, Object>> getFluentBitTemplates() {
-        Map<String, Object> result = new HashMap<>();
-
+    public ResponseEntity<ApiResponse<Map<String, Map<String, String>>>> getFluentBitTemplates() {
         try {
             Map<String, Map<String, String>> templates = new LinkedHashMap<>();
 
@@ -321,45 +328,6 @@ public class AccessLogConfigController {
     Port              8080
     URI               /api/access-log/collect
     Format            json
-""");
-            k8sTemplate.put("configMap", """
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: fluent-bit-config
-  namespace: gateway
-data:
-  fluent-bit.conf: |
-    [SERVICE]
-        Flush         5
-        Log_Level     info
-        Parsers_File  parsers.conf
-
-    [INPUT]
-        Name              tail
-        Path              /var/log/containers/*gateway*.log
-        Parser            json
-        Tag               gateway.access
-        Mem_Buf_Limit     50MB
-
-    [FILTER]
-        Name              kubernetes
-        Match             gateway.*
-        Kube_URL          https://kubernetes.default.svc:443
-        Kube_Tag_Prefix   gateway.access.
-
-    [OUTPUT]
-        Name              http
-        Match             gateway.*
-        Host              gateway-admin-service
-        Port              8080
-        URI               /api/access-log/collect
-        Format            json
-
-  parsers.conf: |
-    [PARSER]
-        Name   json
-        Format json
 """);
             templates.put("K8S", k8sTemplate);
 
@@ -429,28 +397,19 @@ services:
 """);
             templates.put("CUSTOM", customTemplate);
 
-            result.put("code", 200);
-            result.put("message", "success");
-            result.put("data", templates);
-
+            return ResponseEntity.ok(ApiResponse.success(templates));
         } catch (Exception e) {
             log.error("Failed to get Fluent Bit templates", e);
-            result.put("code", 500);
-            result.put("message", "Failed to get templates: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to get templates: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 
     /**
      * Get output target recommendation based on deployment mode.
-     * Helps frontend determine the best output mode for each deployment.
      */
     @GetMapping("/output-target-recommendation")
-    public ResponseEntity<Map<String, Object>> getOutputTargetRecommendation(
+    public ResponseEntity<ApiResponse<Map<String, Object>>> getOutputTargetRecommendation(
             @RequestParam String deployMode) {
-        Map<String, Object> result = new HashMap<>();
-
         try {
             String recommendedTarget;
             String reason;
@@ -489,84 +448,24 @@ services:
             recommendation.put("disableFileOptions", disableFileOptions);
             recommendation.put("deployMode", deployMode);
 
-            result.put("code", 200);
-            result.put("message", "success");
-            result.put("data", recommendation);
-
+            return ResponseEntity.ok(ApiResponse.success(recommendation));
         } catch (Exception e) {
             log.error("Failed to get output target recommendation", e);
-            result.put("code", 500);
-            result.put("message", "Failed to get recommendation: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to get recommendation: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
-    }
-
-    private final ObjectMapper objectMapper = new ObjectMapper();
-
-    /**
-     * Resolve log directory - try multiple possible locations.
-     */
-    private Path resolveLogDirectory(String logDir) {
-        if (logDir == null || logDir.isEmpty()) {
-            logDir = "./logs/access";
-        }
-
-        // Try the configured path first
-        Path dirPath = Paths.get(logDir);
-        if (Files.exists(dirPath)) {
-            return dirPath;
-        }
-
-        // Try absolute path
-        if (Paths.get(logDir).isAbsolute()) {
-            return dirPath;
-        }
-
-        // Try relative to user.dir (project root)
-        String userDir = System.getProperty("user.dir");
-        dirPath = Paths.get(userDir, logDir);
-        if (Files.exists(dirPath)) {
-            return dirPath;
-        }
-
-        // Try sibling my-gateway directory (common dev setup)
-        Path gatewayPath = Paths.get(userDir).getParent();
-        if (gatewayPath != null) {
-            Path myGatewayPath = gatewayPath.resolve("my-gateway");
-            if (Files.exists(myGatewayPath)) {
-                dirPath = myGatewayPath.resolve(logDir.replace("./", ""));
-                if (Files.exists(dirPath)) {
-                    return dirPath;
-                }
-            }
-            // Also try gatewayPath directly
-            dirPath = gatewayPath.resolve("my-gateway/logs/access");
-            if (Files.exists(dirPath)) {
-                return dirPath;
-            }
-        }
-
-        // Return original path
-        return Paths.get(logDir);
     }
 
     /**
      * Get list of log files.
      */
     @GetMapping("/files")
-    public ResponseEntity<Map<String, Object>> getLogFiles() {
-        Map<String, Object> result = new HashMap<>();
-
+    public ResponseEntity<ApiResponse<List<Map<String, Object>>>> getLogFiles() {
         try {
             AccessLogGlobalConfig config = accessLogConfigService.getConfig();
             Path dirPath = resolveLogDirectory(config.getLogDirectory());
 
             if (dirPath == null || !Files.exists(dirPath)) {
-                result.put("code", 200);
-                result.put("data", Collections.emptyList());
-                result.put("message", "Log directory not found: " + config.getLogDirectory());
-                return ResponseEntity.ok(result);
+                return ResponseEntity.ok(ApiResponse.success(Collections.emptyList(), "Log directory not found: " + config.getLogDirectory()));
             }
 
             List<Map<String, Object>> files;
@@ -595,23 +494,18 @@ services:
                     .collect(Collectors.toList());
             }
 
-            result.put("code", 200);
-            result.put("data", files);
-
+            return ResponseEntity.ok(ApiResponse.success(files));
         } catch (Exception e) {
             log.error("Failed to list log files", e);
-            result.put("code", 500);
-            result.put("message", "Failed to list files: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to list files: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 
     /**
      * Get log entries from a file.
      */
     @GetMapping("/entries")
-    public ResponseEntity<Map<String, Object>> getLogEntries(
+    public ResponseEntity<ApiResponse<Map<String, Object>>> getLogEntries(
             @RequestParam(required = false) String date,
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "100") int size,
@@ -619,9 +513,6 @@ services:
             @RequestParam(required = false) Integer statusCode,
             @RequestParam(required = false) String path,
             @RequestParam(required = false) String traceId) {
-
-        Map<String, Object> result = new HashMap<>();
-
         try {
             AccessLogGlobalConfig config = accessLogConfigService.getConfig();
             Path logDirPath = resolveLogDirectory(config.getLogDirectory());
@@ -636,15 +527,13 @@ services:
 
             Path filePath = logDirPath.resolve(fileName);
             if (!Files.exists(filePath)) {
-                result.put("code", 200);
-                result.put("data", Map.of(
-                    "entries", Collections.emptyList(),
-                    "total", 0,
-                    "page", page,
-                    "size", size,
-                    "file", fileName
-                ));
-                return ResponseEntity.ok(result);
+                Map<String, Object> data = new LinkedHashMap<>();
+                data.put("entries", Collections.emptyList());
+                data.put("total", 0);
+                data.put("page", page);
+                data.put("size", size);
+                data.put("file", fileName);
+                return ResponseEntity.ok(ApiResponse.success(data));
             }
 
             // Read and parse log entries
@@ -700,33 +589,26 @@ services:
                 pagedEntries = allEntries.subList(fromIndex, toIndex);
             }
 
-            result.put("code", 200);
-            result.put("data", Map.of(
-                "entries", pagedEntries,
-                "total", total,
-                "page", page,
-                "size", size,
-                "file", fileName
-            ));
+            Map<String, Object> data = new LinkedHashMap<>();
+            data.put("entries", pagedEntries);
+            data.put("total", total);
+            data.put("page", page);
+            data.put("size", size);
+            data.put("file", fileName);
 
+            return ResponseEntity.ok(ApiResponse.success(data));
         } catch (Exception e) {
             log.error("Failed to read log entries", e);
-            result.put("code", 500);
-            result.put("message", "Failed to read logs: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to read logs: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 
     /**
      * Get log statistics.
      */
     @GetMapping("/stats")
-    public ResponseEntity<Map<String, Object>> getLogStats(
+    public ResponseEntity<ApiResponse<Map<String, Object>>> getLogStats(
             @RequestParam(required = false) String date) {
-
-        Map<String, Object> result = new HashMap<>();
-
         try {
             AccessLogGlobalConfig config = accessLogConfigService.getConfig();
             Path logDirPath = resolveLogDirectory(config.getLogDirectory());
@@ -740,15 +622,13 @@ services:
 
             Path filePath = logDirPath.resolve(fileName);
             if (!Files.exists(filePath)) {
-                result.put("code", 200);
-                result.put("data", Map.of(
-                    "totalRequests", 0,
-                    "avgDuration", 0.0,
-                    "statusCodes", Collections.emptyMap(),
-                    "topPaths", Collections.emptyList(),
-                    "methods", Collections.emptyMap()
-                ));
-                return ResponseEntity.ok(result);
+                Map<String, Object> data = new LinkedHashMap<>();
+                data.put("totalRequests", 0);
+                data.put("avgDuration", 0.0);
+                data.put("statusCodes", Collections.emptyMap());
+                data.put("topPaths", Collections.emptyList());
+                data.put("methods", Collections.emptyMap());
+                return ResponseEntity.ok(ApiResponse.success(data));
             }
 
             // Calculate statistics
@@ -764,282 +644,6 @@ services:
                     try {
                         @SuppressWarnings("unchecked")
                         Map<String, Object> entry = objectMapper.readValue(line, Map.class);
-                        totalRequests++;
-
-                        Object duration = entry.get("durationMs");
-                        if (duration != null) {
-                            totalDuration += ((Number) duration).longValue();
-                        }
-
-                        Object status = entry.get("statusCode");
-                        if (status != null) {
-                            int code = ((Number) status).intValue();
-                            statusCodes.merge(code, 1, Integer::sum);
-                        }
-
-                        String path = (String) entry.get("path");
-                        if (path != null) {
-                            paths.merge(path, 1, Integer::sum);
-                        }
-
-                        String method = (String) entry.get("method");
-                        if (method != null) {
-                            methods.merge(method, 1, Integer::sum);
-                        }
-                    } catch (Exception e) {
-                        // Skip malformed lines
-                    }
-                }
-            }
-
-            // Get top 10 paths
-            List<Map<String, Object>> topPaths = paths.entrySet().stream()
-                .sorted(Map.Entry.<String, Integer>comparingByValue().reversed())
-                .limit(10)
-                .map(e -> Map.<String, Object>of("path", e.getKey(), "count", e.getValue()))
-                .collect(Collectors.toList());
-
-            double avgDuration = totalRequests > 0 ? (double) totalDuration / totalRequests : 0;
-
-            result.put("code", 200);
-            result.put("data", Map.of(
-                "totalRequests", totalRequests,
-                "avgDuration", Math.round(avgDuration * 100.0) / 100.0,
-                "statusCodes", statusCodes,
-                "topPaths", topPaths,
-                "methods", methods,
-                "file", fileName
-            ));
-
-        } catch (Exception e) {
-            log.error("Failed to get log stats", e);
-            result.put("code", 500);
-            result.put("message", "Failed to get stats: " + e.getMessage());
-        }
-
-        return ResponseEntity.ok(result);
-    }
-
-    // ============================================================
-    // Kubernetes Pod Access Log APIs (Real-time from stdout)
-    // ============================================================
-
-    /**
-     * Get namespaces for K8S mode.
-     * Returns list of namespaces in the cluster.
-     */
-    @GetMapping("/k8s/namespaces")
-    public ResponseEntity<Map<String, Object>> getK8sNamespaces(@RequestParam Long clusterId) {
-        Map<String, Object> result = new HashMap<>();
-
-        try {
-            List<String> namespaces = kubernetesResourceService.getClusterNamespaces(clusterId);
-            result.put("code", 200);
-            result.put("data", namespaces);
-        } catch (Exception e) {
-            log.error("Failed to get K8s namespaces", e);
-            result.put("code", 500);
-            result.put("message", "Failed to get namespaces: " + e.getMessage());
-        }
-
-        return ResponseEntity.ok(result);
-    }
-
-    /**
-     * Get gateway pods for K8S mode.
-     * Returns list of pods that can be selected for log viewing.
-     */
-    @GetMapping("/k8s/pods")
-    public ResponseEntity<Map<String, Object>> getK8sGatewayPods(
-            @RequestParam Long clusterId,
-            @RequestParam(required = false) String namespace) {
-        Map<String, Object> result = new HashMap<>();
-
-        try {
-            // Get all pods and filter by gateway label
-            List<Map<String, Object>> allPods = kubernetesResourceService.getPods(clusterId, namespace);
-            
-            // Filter pods that match gateway (by label app=my-gateway or name contains gateway)
-            List<Map<String, Object>> gatewayPods = allPods.stream()
-                    .filter(pod -> {
-                        Map<String, String> labels = (Map<String, String>) pod.get("labels");
-                        if (labels != null) {
-                            // Check common gateway labels
-                            String app = labels.get("app");
-                            String appName = labels.get("app-name");
-                            if (app != null && app.contains("gateway")) return true;
-                            if (appName != null && appName.contains("gateway")) return true;
-                        }
-                        // Also check pod name
-                        String name = (String) pod.get("name");
-                        if (name != null && name.contains("gateway")) return true;
-                        return false;
-                    })
-                    .map(pod -> {
-                        Map<String, Object> info = new HashMap<>();
-                        info.put("name", pod.get("name"));
-                        info.put("namespace", pod.get("namespace"));
-                        info.put("phase", pod.get("phase"));
-                        info.put("podIP", pod.get("podIP"));
-                        return info;
-                    })
-                    .toList();
-
-            result.put("code", 200);
-            result.put("data", gatewayPods);
-
-        } catch (Exception e) {
-            log.error("Failed to get K8s gateway pods", e);
-            result.put("code", 500);
-            result.put("message", "Failed to get pods: " + e.getMessage());
-        }
-
-        return ResponseEntity.ok(result);
-    }
-
-    /**
-     * Get access log entries from K8s Pod stdout.
-     * Supports both real-time (tailLines) and history (sinceSeconds) modes.
-     */
-    @GetMapping("/k8s/entries")
-    public ResponseEntity<Map<String, Object>> getK8sLogEntries(
-            @RequestParam Long clusterId,
-            @RequestParam String namespace,
-            @RequestParam String podName,
-            @RequestParam(defaultValue = "500") int tailLines,
-            @RequestParam(defaultValue = "0") int page,
-            @RequestParam(defaultValue = "50") int size,
-            @RequestParam(required = false) String method,
-            @RequestParam(required = false) Integer statusCode,
-            @RequestParam(required = false) String path,
-            @RequestParam(required = false) String traceId,
-            @RequestParam(required = false) Integer sinceSeconds) {
-
-        Map<String, Object> result = new HashMap<>();
-
-        try {
-            // Get raw logs from Pod stdout
-            // If sinceSeconds is provided, use it for history query; otherwise use tailLines for real-time
-            String rawLogs = kubernetesResourceService.getPodLogs(clusterId, namespace, podName, null, 
-                sinceSeconds != null ? null : tailLines, sinceSeconds);
-
-            // Parse JSON log entries
-            List<Map<String, Object>> allEntries = new ArrayList<>();
-            if (rawLogs != null && !rawLogs.isEmpty()) {
-                for (String line : rawLogs.split("\n")) {
-                    if (line == null || line.trim().isEmpty()) continue;
-                    
-                    // Skip non-JSON lines (like startup logs, errors, etc.)
-                    if (!line.trim().startsWith("{")) continue;
-                    
-                    try {
-                        @SuppressWarnings("unchecked")
-                        Map<String, Object> entry = objectMapper.readValue(line, Map.class);
-
-                        // Check if this is an access log entry (has required fields)
-                        if (entry.get("method") == null || entry.get("path") == null) continue;
-
-                        // Apply filters
-                        if (method != null && !method.isEmpty()) {
-                            if (!method.equalsIgnoreCase((String) entry.get("method"))) continue;
-                        }
-                        if (statusCode != null) {
-                            Object code = entry.get("statusCode");
-                            if (code == null || ((Number) code).intValue() != statusCode) continue;
-                        }
-                        if (path != null && !path.isEmpty()) {
-                            String entryPath = (String) entry.get("path");
-                            if (entryPath == null || !entryPath.contains(path)) continue;
-                        }
-                        if (traceId != null && !traceId.isEmpty()) {
-                            if (!traceId.equals(entry.get("traceId"))) continue;
-                        }
-
-                        allEntries.add(entry);
-                    } catch (Exception e) {
-                        // Skip malformed JSON lines
-                    }
-                }
-            }
-
-            // Sort by timestamp (newest first)
-            allEntries.sort((a, b) -> {
-                String tsA = (String) a.get("@timestamp");
-                String tsB = (String) b.get("@timestamp");
-                if (tsA == null || tsB == null) return 0;
-                return tsB.compareTo(tsA);  // Descending
-            });
-
-            // Paginate
-            int total = allEntries.size();
-            int fromIndex = page * size;
-            int toIndex = Math.min(fromIndex + size, total);
-
-            List<Map<String, Object>> pagedEntries;
-            if (fromIndex >= total) {
-                pagedEntries = Collections.emptyList();
-            } else {
-                pagedEntries = allEntries.subList(fromIndex, toIndex);
-            }
-
-            result.put("code", 200);
-            result.put("data", Map.of(
-                "entries", pagedEntries,
-                "total", total,
-                "page", page,
-                "size", size,
-                "podName", podName,
-                "namespace", namespace,
-                "realtime", true  // Mark as realtime
-            ));
-
-        } catch (Exception e) {
-            log.error("Failed to get K8s log entries", e);
-            result.put("code", 500);
-            result.put("message", "Failed to read logs from Pod: " + e.getMessage());
-        }
-
-        return ResponseEntity.ok(result);
-    }
-
-    /**
-     * Get access log statistics from K8s Pod stdout.
-     * Supports both real-time (tailLines) and history (sinceSeconds) modes.
-     */
-    @GetMapping("/k8s/stats")
-    public ResponseEntity<Map<String, Object>> getK8sLogStats(
-            @RequestParam Long clusterId,
-            @RequestParam String namespace,
-            @RequestParam String podName,
-            @RequestParam(defaultValue = "500") int tailLines,
-            @RequestParam(required = false) Integer sinceSeconds) {
-
-        Map<String, Object> result = new HashMap<>();
-
-        try {
-            // If sinceSeconds is provided, use it for history query; otherwise use tailLines for real-time
-            String rawLogs = kubernetesResourceService.getPodLogs(clusterId, namespace, podName, null, 
-                sinceSeconds != null ? null : tailLines, sinceSeconds);
-
-            // Calculate statistics
-            long totalRequests = 0;
-            long totalDuration = 0;
-            Map<Integer, Integer> statusCodes = new HashMap<>();
-            Map<String, Integer> paths = new HashMap<>();
-            Map<String, Integer> methods = new HashMap<>();
-
-            if (rawLogs != null && !rawLogs.isEmpty()) {
-                for (String line : rawLogs.split("\n")) {
-                    if (line == null || line.trim().isEmpty()) continue;
-                    if (!line.trim().startsWith("{")) continue;
-
-                    try {
-                        @SuppressWarnings("unchecked")
-                        Map<String, Object> entry = objectMapper.readValue(line, Map.class);
-
-                        // Only count access log entries
-                        if (entry.get("method") == null || entry.get("path") == null) continue;
-
                         totalRequests++;
 
                         Object duration = entry.get("durationMs");
@@ -1073,48 +677,271 @@ services:
                 .sorted(Map.Entry.<String, Integer>comparingByValue().reversed())
                 .limit(10)
                 .map(e -> Map.<String, Object>of("path", e.getKey(), "count", e.getValue()))
+                .collect(Collectors.toList());
+
+            double avgDuration = totalRequests > 0 ? (double) totalDuration / totalRequests : 0;
+
+            Map<String, Object> data = new LinkedHashMap<>();
+            data.put("totalRequests", totalRequests);
+            data.put("avgDuration", Math.round(avgDuration * 100.0) / 100.0);
+            data.put("statusCodes", statusCodes);
+            data.put("topPaths", topPaths);
+            data.put("methods", methods);
+            data.put("file", fileName);
+
+            return ResponseEntity.ok(ApiResponse.success(data));
+        } catch (Exception e) {
+            log.error("Failed to get log stats", e);
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to get stats: " + e.getMessage()));
+        }
+    }
+
+    // ============================================================
+    // Kubernetes Pod Access Log APIs (Real-time from stdout)
+    // ============================================================
+
+    /**
+     * Get namespaces for K8S mode.
+     */
+    @GetMapping("/k8s/namespaces")
+    public ResponseEntity<ApiResponse<List<String>>> getK8sNamespaces(@RequestParam Long clusterId) {
+        try {
+            List<String> namespaces = kubernetesResourceService.getClusterNamespaces(clusterId);
+            return ResponseEntity.ok(ApiResponse.success(namespaces));
+        } catch (Exception e) {
+            log.error("Failed to get K8s namespaces", e);
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to get namespaces: " + e.getMessage()));
+        }
+    }
+
+    /**
+     * Get gateway pods for K8S mode.
+     */
+    @GetMapping("/k8s/pods")
+    public ResponseEntity<ApiResponse<List<Map<String, Object>>>> getK8sGatewayPods(
+            @RequestParam Long clusterId,
+            @RequestParam(required = false) String namespace) {
+        try {
+            List<Map<String, Object>> allPods = kubernetesResourceService.getPods(clusterId, namespace);
+
+            List<Map<String, Object>> gatewayPods = allPods.stream()
+                    .filter(pod -> {
+                        Map<String, String> labels = (Map<String, String>) pod.get("labels");
+                        if (labels != null) {
+                            String app = labels.get("app");
+                            String appName = labels.get("app-name");
+                            if (app != null && app.contains("gateway")) return true;
+                            if (appName != null && appName.contains("gateway")) return true;
+                        }
+                        String name = (String) pod.get("name");
+                        if (name != null && name.contains("gateway")) return true;
+                        return false;
+                    })
+                    .map(pod -> {
+                        Map<String, Object> info = new HashMap<>();
+                        info.put("name", pod.get("name"));
+                        info.put("namespace", pod.get("namespace"));
+                        info.put("phase", pod.get("phase"));
+                        info.put("podIP", pod.get("podIP"));
+                        return info;
+                    })
+                    .toList();
+
+            return ResponseEntity.ok(ApiResponse.success(gatewayPods));
+        } catch (Exception e) {
+            log.error("Failed to get K8s gateway pods", e);
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to get pods: " + e.getMessage()));
+        }
+    }
+
+    /**
+     * Get access log entries from K8s Pod stdout.
+     */
+    @GetMapping("/k8s/entries")
+    public ResponseEntity<ApiResponse<Map<String, Object>>> getK8sLogEntries(
+            @RequestParam Long clusterId,
+            @RequestParam String namespace,
+            @RequestParam String podName,
+            @RequestParam(defaultValue = "500") int tailLines,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "50") int size,
+            @RequestParam(required = false) String method,
+            @RequestParam(required = false) Integer statusCode,
+            @RequestParam(required = false) String path,
+            @RequestParam(required = false) String traceId,
+            @RequestParam(required = false) Integer sinceSeconds) {
+        try {
+            String rawLogs = kubernetesResourceService.getPodLogs(clusterId, namespace, podName, null,
+                sinceSeconds != null ? null : tailLines, sinceSeconds);
+
+            List<Map<String, Object>> allEntries = new ArrayList<>();
+            if (rawLogs != null && !rawLogs.isEmpty()) {
+                for (String line : rawLogs.split("\n")) {
+                    if (line == null || line.trim().isEmpty()) continue;
+                    if (!line.trim().startsWith("{")) continue;
+
+                    try {
+                        @SuppressWarnings("unchecked")
+                        Map<String, Object> entry = objectMapper.readValue(line, Map.class);
+
+                        if (entry.get("method") == null || entry.get("path") == null) continue;
+
+                        if (method != null && !method.isEmpty()) {
+                            if (!method.equalsIgnoreCase((String) entry.get("method"))) continue;
+                        }
+                        if (statusCode != null) {
+                            Object code = entry.get("statusCode");
+                            if (code == null || ((Number) code).intValue() != statusCode) continue;
+                        }
+                        if (path != null && !path.isEmpty()) {
+                            String entryPath = (String) entry.get("path");
+                            if (entryPath == null || !entryPath.contains(path)) continue;
+                        }
+                        if (traceId != null && !traceId.isEmpty()) {
+                            if (!traceId.equals(entry.get("traceId"))) continue;
+                        }
+
+                        allEntries.add(entry);
+                    } catch (Exception e) {
+                        // Skip malformed JSON lines
+                    }
+                }
+            }
+
+            // Sort by timestamp (newest first)
+            allEntries.sort((a, b) -> {
+                String tsA = (String) a.get("@timestamp");
+                String tsB = (String) b.get("@timestamp");
+                if (tsA == null || tsB == null) return 0;
+                return tsB.compareTo(tsA);
+            });
+
+            // Paginate
+            int total = allEntries.size();
+            int fromIndex = page * size;
+            int toIndex = Math.min(fromIndex + size, total);
+
+            List<Map<String, Object>> pagedEntries;
+            if (fromIndex >= total) {
+                pagedEntries = Collections.emptyList();
+            } else {
+                pagedEntries = allEntries.subList(fromIndex, toIndex);
+            }
+
+            Map<String, Object> data = new LinkedHashMap<>();
+            data.put("entries", pagedEntries);
+            data.put("total", total);
+            data.put("page", page);
+            data.put("size", size);
+            data.put("podName", podName);
+            data.put("namespace", namespace);
+            data.put("realtime", true);
+
+            return ResponseEntity.ok(ApiResponse.success(data));
+        } catch (Exception e) {
+            log.error("Failed to get K8s log entries", e);
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to read logs from Pod: " + e.getMessage()));
+        }
+    }
+
+    /**
+     * Get access log statistics from K8s Pod stdout.
+     */
+    @GetMapping("/k8s/stats")
+    public ResponseEntity<ApiResponse<Map<String, Object>>> getK8sLogStats(
+            @RequestParam Long clusterId,
+            @RequestParam String namespace,
+            @RequestParam String podName,
+            @RequestParam(defaultValue = "500") int tailLines,
+            @RequestParam(required = false) Integer sinceSeconds) {
+        try {
+            String rawLogs = kubernetesResourceService.getPodLogs(clusterId, namespace, podName, null,
+                sinceSeconds != null ? null : tailLines, sinceSeconds);
+
+            long totalRequests = 0;
+            long totalDuration = 0;
+            Map<Integer, Integer> statusCodes = new HashMap<>();
+            Map<String, Integer> paths = new HashMap<>();
+            Map<String, Integer> methods = new HashMap<>();
+
+            if (rawLogs != null && !rawLogs.isEmpty()) {
+                for (String line : rawLogs.split("\n")) {
+                    if (line == null || line.trim().isEmpty()) continue;
+                    if (!line.trim().startsWith("{")) continue;
+
+                    try {
+                        @SuppressWarnings("unchecked")
+                        Map<String, Object> entry = objectMapper.readValue(line, Map.class);
+
+                        if (entry.get("method") == null || entry.get("path") == null) continue;
+
+                        totalRequests++;
+
+                        Object duration = entry.get("durationMs");
+                        if (duration != null) {
+                            totalDuration += ((Number) duration).longValue();
+                        }
+
+                        Object status = entry.get("statusCode");
+                        if (status != null) {
+                            int code = ((Number) status).intValue();
+                            statusCodes.merge(code, 1, Integer::sum);
+                        }
+
+                        String pathStr = (String) entry.get("path");
+                        if (pathStr != null) {
+                            paths.merge(pathStr, 1, Integer::sum);
+                        }
+
+                        String methodStr = (String) entry.get("method");
+                        if (methodStr != null) {
+                            methods.merge(methodStr, 1, Integer::sum);
+                        }
+                    } catch (Exception e) {
+                        // Skip malformed lines
+                    }
+                }
+            }
+
+            List<Map<String, Object>> topPaths = paths.entrySet().stream()
+                .sorted(Map.Entry.<String, Integer>comparingByValue().reversed())
+                .limit(10)
+                .map(e -> Map.<String, Object>of("path", e.getKey(), "count", e.getValue()))
                 .toList();
 
             double avgDuration = totalRequests > 0 ? (double) totalDuration / totalRequests : 0;
 
-            result.put("code", 200);
-            result.put("data", Map.of(
-                "totalRequests", totalRequests,
-                "avgDuration", Math.round(avgDuration * 100.0) / 100.0,
-                "statusCodes", statusCodes,
-                "topPaths", topPaths,
-                "methods", methods,
-                "podName", podName,
-                "realtime", true
-            ));
+            Map<String, Object> data = new LinkedHashMap<>();
+            data.put("totalRequests", totalRequests);
+            data.put("avgDuration", Math.round(avgDuration * 100.0) / 100.0);
+            data.put("statusCodes", statusCodes);
+            data.put("topPaths", topPaths);
+            data.put("methods", methods);
+            data.put("podName", podName);
+            data.put("realtime", true);
 
+            return ResponseEntity.ok(ApiResponse.success(data));
         } catch (Exception e) {
             log.error("Failed to get K8s log stats", e);
-            result.put("code", 500);
-            result.put("message", "Failed to get stats: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to get stats: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 
     @PostMapping("/collect")
-    public ResponseEntity<Map<String, Object>> collectLogs(@RequestBody List<Map<String, Object>> logs) {
-        Map<String, Object> result = new HashMap<>();
-
+    public ResponseEntity<ApiResponse<Map<String, Object>>> collectLogs(@RequestBody List<Map<String, Object>> logs) {
         try {
             if (logs == null || logs.isEmpty()) {
-                result.put("code", 200);
-                result.put("message", "No logs to collect");
-                result.put("count", 0);
-                return ResponseEntity.ok(result);
+                Map<String, Object> data = new HashMap<>();
+                data.put("count", 0);
+                return ResponseEntity.ok(ApiResponse.success(data, "No logs to collect"));
             }
 
             String instanceId = null;
-            List<com.leoli.gateway.admin.model.AccessLogEntryEntity> entries = new ArrayList<>();
+            List<AccessLogEntryEntity> entries = new ArrayList<>();
 
             for (Map<String, Object> logEntry : logs) {
                 try {
-                    com.leoli.gateway.admin.model.AccessLogEntryEntity entity = new com.leoli.gateway.admin.model.AccessLogEntryEntity();
+                    AccessLogEntryEntity entity = new AccessLogEntryEntity();
 
                     if (instanceId == null && logEntry.containsKey("instanceId")) {
                         instanceId = (String) logEntry.get("instanceId");
@@ -1150,12 +977,12 @@ services:
                     String timestampStr = (String) logEntry.get("@timestamp");
                     if (timestampStr != null) {
                         try {
-                            entity.setLogTimestamp(java.time.LocalDateTime.parse(timestampStr.replace("Z", ""), java.time.format.DateTimeFormatter.ISO_LOCAL_DATE_TIME));
+                            entity.setLogTimestamp(LocalDateTime.parse(timestampStr.replace("Z", ""), DateTimeFormatter.ISO_LOCAL_DATE_TIME));
                         } catch (Exception e) {
-                            entity.setLogTimestamp(java.time.LocalDateTime.now());
+                            entity.setLogTimestamp(LocalDateTime.now());
                         }
                     } else {
-                        entity.setLogTimestamp(java.time.LocalDateTime.now());
+                        entity.setLogTimestamp(LocalDateTime.now());
                     }
 
                     entries.add(entity);
@@ -1168,21 +995,18 @@ services:
                 accessLogEntryRepository.saveAll(entries);
             }
 
-            result.put("code", 200);
-            result.put("message", "Logs collected successfully");
-            result.put("count", entries.size());
+            Map<String, Object> data = new HashMap<>();
+            data.put("count", entries.size());
 
+            return ResponseEntity.ok(ApiResponse.success(data, "Logs collected successfully"));
         } catch (Exception e) {
             log.error("Failed to collect logs", e);
-            result.put("code", 500);
-            result.put("message", "Failed to collect logs: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to collect logs: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 
     @GetMapping("/history/entries")
-    public ResponseEntity<Map<String, Object>> getHistoryEntries(
+    public ResponseEntity<ApiResponse<Map<String, Object>>> getHistoryEntries(
             @RequestParam(required = false) String instanceId,
             @RequestParam(required = false) String startTime,
             @RequestParam(required = false) String endTime,
@@ -1192,23 +1016,19 @@ services:
             @RequestParam(required = false) String traceId,
             @RequestParam(defaultValue = "0") int page,
             @RequestParam(defaultValue = "50") int size) {
-        Map<String, Object> result = new HashMap<>();
-
         try {
             String effectiveInstanceId = instanceId != null ? instanceId : "default";
 
-            java.time.LocalDateTime start = startTime != null
-                ? java.time.LocalDateTime.parse(startTime.replace("Z", "").substring(0, 19))
-                : java.time.LocalDateTime.now().minusHours(1);
-            java.time.LocalDateTime end = endTime != null
-                ? java.time.LocalDateTime.parse(endTime.replace("Z", "").substring(0, 19))
-                : java.time.LocalDateTime.now();
+            LocalDateTime start = startTime != null
+                ? LocalDateTime.parse(startTime.replace("Z", "").substring(0, 19))
+                : LocalDateTime.now().minusHours(1);
+            LocalDateTime end = endTime != null
+                ? LocalDateTime.parse(endTime.replace("Z", "").substring(0, 19))
+                : LocalDateTime.now();
 
-            org.springframework.data.domain.Pageable pageable = org.springframework.data.domain.PageRequest.of(
-                page, size, org.springframework.data.domain.Sort.by("logTimestamp").descending()
-            );
+            Pageable pageable = PageRequest.of(page, size, Sort.by("logTimestamp").descending());
 
-            org.springframework.data.domain.Page<com.leoli.gateway.admin.model.AccessLogEntryEntity> logPage;
+            Page<AccessLogEntryEntity> logPage;
 
             if (traceId != null && !traceId.isEmpty()) {
                 logPage = accessLogEntryRepository.findByInstanceIdAndTraceId(effectiveInstanceId, traceId, pageable);
@@ -1250,41 +1070,35 @@ services:
                 })
                 .toList();
 
-            result.put("code", 200);
-            result.put("data", Map.of(
-                "entries", entries,
-                "total", logPage.getTotalElements(),
-                "page", page,
-                "size", size,
-                "totalPages", logPage.getTotalPages(),
-                "history", true
-            ));
+            Map<String, Object> data = new LinkedHashMap<>();
+            data.put("entries", entries);
+            data.put("total", logPage.getTotalElements());
+            data.put("page", page);
+            data.put("size", size);
+            data.put("totalPages", logPage.getTotalPages());
+            data.put("history", true);
 
+            return ResponseEntity.ok(ApiResponse.success(data));
         } catch (Exception e) {
             log.error("Failed to get history log entries", e);
-            result.put("code", 500);
-            result.put("message", "Failed to get history logs: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to get history logs: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 
     @GetMapping("/history/stats")
-    public ResponseEntity<Map<String, Object>> getHistoryStats(
+    public ResponseEntity<ApiResponse<Map<String, Object>>> getHistoryStats(
             @RequestParam(required = false) String instanceId,
             @RequestParam(required = false) String startTime,
             @RequestParam(required = false) String endTime) {
-        Map<String, Object> result = new HashMap<>();
-
         try {
             String effectiveInstanceId = instanceId != null ? instanceId : "default";
 
-            java.time.LocalDateTime start = startTime != null
-                ? java.time.LocalDateTime.parse(startTime.replace("Z", "").substring(0, 19))
-                : java.time.LocalDateTime.now().minusHours(1);
-            java.time.LocalDateTime end = endTime != null
-                ? java.time.LocalDateTime.parse(endTime.replace("Z", "").substring(0, 19))
-                : java.time.LocalDateTime.now();
+            LocalDateTime start = startTime != null
+                ? LocalDateTime.parse(startTime.replace("Z", "").substring(0, 19))
+                : LocalDateTime.now().minusHours(1);
+            LocalDateTime end = endTime != null
+                ? LocalDateTime.parse(endTime.replace("Z", "").substring(0, 19))
+                : LocalDateTime.now();
 
             long totalRequests = accessLogEntryRepository.countByInstanceIdAndTimeRange(effectiveInstanceId, start, end);
             Double avgDuration = accessLogEntryRepository.avgDurationByInstanceIdAndTimeRange(effectiveInstanceId, start, end);
@@ -1310,82 +1124,65 @@ services:
                 topPaths.add(pathInfo);
             }
 
-            result.put("code", 200);
-            result.put("data", Map.of(
-                "totalRequests", totalRequests,
-                "avgDuration", avgDuration != null ? Math.round(avgDuration * 100.0) / 100.0 : 0.0,
-                "statusCodes", statusCodes,
-                "topPaths", topPaths,
-                "methods", methods,
-                "history", true,
-                "startTime", start.toString(),
-                "endTime", end.toString()
-            ));
+            Map<String, Object> data = new LinkedHashMap<>();
+            data.put("totalRequests", totalRequests);
+            data.put("avgDuration", avgDuration != null ? Math.round(avgDuration * 100.0) / 100.0 : 0.0);
+            data.put("statusCodes", statusCodes);
+            data.put("topPaths", topPaths);
+            data.put("methods", methods);
+            data.put("history", true);
+            data.put("startTime", start.toString());
+            data.put("endTime", end.toString());
 
+            return ResponseEntity.ok(ApiResponse.success(data));
         } catch (Exception e) {
             log.error("Failed to get history log stats", e);
-            result.put("code", 500);
-            result.put("message", "Failed to get history stats: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to get history stats: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 
     @GetMapping("/history/cleanup/stats")
-    public ResponseEntity<Map<String, Object>> getCleanupStats(
+    public ResponseEntity<ApiResponse<Map<String, Object>>> getCleanupStats(
             @RequestParam(required = false) String instanceId,
             @RequestParam(defaultValue = "7") int retentionDays) {
-        Map<String, Object> result = new HashMap<>();
-
         try {
             String effectiveInstanceId = instanceId != null ? instanceId : "default";
-            java.time.LocalDateTime beforeTime = java.time.LocalDateTime.now().minusDays(retentionDays);
+            LocalDateTime beforeTime = LocalDateTime.now().minusDays(retentionDays);
 
             long oldLogsCount = accessLogEntryRepository.countByInstanceIdAndLogTimestampBefore(effectiveInstanceId, beforeTime);
             long totalLogs = accessLogEntryRepository.count();
 
-            result.put("code", 200);
-            result.put("data", Map.of(
-                "oldLogsCount", oldLogsCount,
-                "totalLogs", totalLogs,
-                "retentionDays", retentionDays,
-                "beforeTime", beforeTime.toString()
-            ));
+            Map<String, Object> data = new LinkedHashMap<>();
+            data.put("oldLogsCount", oldLogsCount);
+            data.put("totalLogs", totalLogs);
+            data.put("retentionDays", retentionDays);
+            data.put("beforeTime", beforeTime.toString());
 
+            return ResponseEntity.ok(ApiResponse.success(data));
         } catch (Exception e) {
             log.error("Failed to get cleanup stats", e);
-            result.put("code", 500);
-            result.put("message", "Failed to get cleanup stats: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to get cleanup stats: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 
     @PostMapping("/history/cleanup")
-    public ResponseEntity<Map<String, Object>> cleanupOldLogs(
+    public ResponseEntity<ApiResponse<Map<String, Object>>> cleanupOldLogs(
             @RequestParam(required = false) String instanceId,
             @RequestParam(defaultValue = "7") int retentionDays) {
-        Map<String, Object> result = new HashMap<>();
-
         try {
             String effectiveInstanceId = instanceId != null ? instanceId : "default";
-            java.time.LocalDateTime beforeTime = java.time.LocalDateTime.now().minusDays(retentionDays);
+            LocalDateTime beforeTime = LocalDateTime.now().minusDays(retentionDays);
 
             int deleted = accessLogEntryRepository.deleteOldLogsByInstanceId(effectiveInstanceId, beforeTime);
 
-            result.put("code", 200);
-            result.put("message", "Cleanup completed");
-            result.put("data", Map.of(
-                "deletedCount", deleted,
-                "retentionDays", retentionDays
-            ));
+            Map<String, Object> data = new LinkedHashMap<>();
+            data.put("deletedCount", deleted);
+            data.put("retentionDays", retentionDays);
 
+            return ResponseEntity.ok(ApiResponse.success(data, "Cleanup completed"));
         } catch (Exception e) {
             log.error("Failed to cleanup old logs", e);
-            result.put("code", 500);
-            result.put("message", "Failed to cleanup logs: " + e.getMessage());
+            return ResponseEntity.internalServerError().body(ApiResponse.error("Failed to cleanup logs: " + e.getMessage()));
         }
-
-        return ResponseEntity.ok(result);
     }
 }
